# AgenLang

./: .dockerignore  .gitignore  AGENTS.md  AgenLang_GSD_Build_Plan.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  GOVERNANCE.md  LICENSE  PROGRESS.md  PROTOCOL.md  README.md  ROADMAP.md  SPEC.md  agenlang_skills.md  demo.py  docker-compose.yml  pyproject.toml  skills.md  test_phase1.py  threat_model.md
.github/workflows/: ci.yml
.planning/: CONTEXT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/0-setup/: 0-PLAN.md  0-SUMMARY.md
.planning/phases/1-protocol-foundation/: 1-PLAN.md  1-SUMMARY.md
.planning/phases/2-exchange-economy/: 2-PLAN.md  2-SUMMARY.md
.planning/phases/3-bridge-cli/: 3-PLAN.md  3-SUMMARY.md
.planning/plans/: phase1_plan1_identity.md  phase1_plan2_schema.md  phase1_plan3_core_agent.md  phase1_plan4_transport.md  phase1_plan5_discovery.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: registry_backends.md
examples/: a2a-wrapper.json  amazo-flight-booking.json  gdpr-purge.json  probabilistic.json  settlement.json  subcontract.json  web-research.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml
schema/: v1.0.json
scripts/: entrypoint.sh
spec/: workflow_safety.tla
src/agenlang/: __init__.py  __main__.py  a2a.py  acp.py  agui.py  anp.py  bridge.py  circuit_breaker.py  cli.py  cli_template.py  client.py  contract.py  contracts.py  core.py  discovery.py  economy.py  fipa.py  identity.py  keys.py  mcp.py  memory.py  middleware.py  models.py  negotiation.py  oasf.py  observability.py  rate_limiter.py  registry.py  runtime.py  schema.py  server.py  server_production.py  settlement.py  solana.py  template.py  tools.py  utils.py  w3c.py
src/agenlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agenlang/backends/: __init__.py  base.py  postgres.py  sqlite.py
src/agenlang/schema/: v1.0.json
src/agenlang/templates/: a2a-delegation.yaml  data-pipeline.yaml  multi-agent.yaml  web-research.yaml
src/agenlang/transport/: __init__.py
templates/: base.yaml  simple-agent.yaml
tests/: __init__.py  conftest.py  test_a2a.py  test_acp.py  test_agui.py  test_anp.py  test_backends.py  test_circuit_breaker.py  test_cli.py  test_contract.py  test_crypto.py  test_e2e_a2a.py  test_embed.py  test_fipa.py  test_mcp.py  test_memory.py  test_multi_protocol.py  test_oasf.py  test_observability.py  test_phase3_integration.py  test_rate_limiter.py  test_registry.py  test_runtime.py  test_settlement.py  test_solana.py  test_template.py  test_tools.py  test_utils.py  test_w3c.py
