[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenlang"
version = "0.1.0"
description = "A semantics layer on top of A2A protocol — adding DID identity and Joule-based metering to Google's A2A"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AgenLang Team", email = "team@agenlang.dev"}
]
keywords = ["agent", "a2a", "did", "joule", "cnp", "fipa", "negotiation", "metering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "rfc8785>=0.1.0",
    "base58>=2.1",
    "multiformats>=0.2",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "zeroconf>=0.32",
    "tiktoken>=0.5",
    "structlog>=24.0",
    "mcp>=1.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
brokers = [
    "nats-py>=0.24",
    "redis>=5.0",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
agenlang = "agenlang.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenlang"]

[tool.hatch.build.targets.sdist]
include = ["src/agenlang"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
